@@ -1,7 +1,0 @@
-\version "1.5.68"
-
-\header {
-texidoc = "1st beam should prob. be horizontal."
-}
-
-\score { \notes <{  [ r8 g''16 des'] [r8 c16 a] }>}
