@@ -1,5 +1,11 @@
 2002-08-11  Jan Nieuwenhuizen  <janneke@gnu.org>
 
+	* input: some fixes.
+	
+	* lily/stem.cc (calc_stem_info): Use get_direction_beam_count.
+
+	* lily/beam.cc (get_direction_beam_count): New function.
+
 	* GNUmakefile.in: Fix config.h dependency.
 
 	* input/test/beam-dir-function.ly: Fix for new default
